# cryptodb

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTION.md  README.md  cryptodb.c  cryptodb.cpp  cryptodb.h  cryptodb.hpp  setup_env.sh
android/: README.md
android/cpp/: CMakeLists.txt  cryptodb.cpp
android/example/: AndroidManifest.xml  MainActivity.kt  build.gradle.kts
android/java/: CryptoDB.java  build.gradle.kts
android/prebuild/: README.md
android/prebuild/example-apk/: output-metadata.json
android/prebuild/lib/: cryptodb.aar
cmake/: FindLevelDB.cmake  FindSCPRNG.cmake  FindcJSON.cmake  Findcrc32c.cmake
test/: CMakeLists.txt  test.c  test.cpp
tools/: make_distr.sh  pre-commit-hook.sh
tools/build_scripts/: Dockerfile.arm_win  Dockerfile.x86_64  build_all_in_docker.sh  build_android.sh  build_arm.sh  build_in_docker.sh  build_win.sh  build_x86_64.sh
tools/cmake-toolchains/: gcc-arm.cmake  gcc-arm64.cmake  gcc-armhf.cmake  gcc-x86.cmake  mingw-w64-i686.cmake  mingw-w64-x86_64.cmake
tools/patches/: 0001-leveldb-windows.patch  0002-cjson-stack-protection-option.patch  apply_patches.sh
tools/qemu-arm/: .gitignore  README.md  install.sh
tools/qemu-arm/configs/: arm.config  arm64.config  armhf.config
